--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -12035,11 +12035,11 @@
     {
         "date": "2018-05-10",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Nashville Predators",
         "awayTeam": "Winnipeg Jets",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 1,
+        "awayGoals": 5
     },
     {
         "date": "2018-05-11",
@@ -12047,6 +12047,15 @@
         "resultType": "TBD",
         "homeTeam": "Tampa Bay Lightning",
         "awayTeam": "Washington Capitals",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
+        "date": "2018-05-12",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Winnipeg Jets",
+        "awayTeam": "Vegas Golden Knights",
         "homeGoals": 0,
         "awayGoals": 0
     },
@@ -12060,11 +12069,29 @@
         "awayGoals": 0
     },
     {
+        "date": "2018-05-14",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Winnipeg Jets",
+        "awayTeam": "Vegas Golden Knights",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
         "date": "2018-05-15",
         "gameType": "P",
         "resultType": "TBD",
         "homeTeam": "Washington Capitals",
         "awayTeam": "Tampa Bay Lightning",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
+        "date": "2018-05-16",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Vegas Golden Knights",
+        "awayTeam": "Winnipeg Jets",
         "homeGoals": 0,
         "awayGoals": 0
     },
@@ -12078,11 +12105,29 @@
         "awayGoals": 0
     },
     {
+        "date": "2018-05-18",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Vegas Golden Knights",
+        "awayTeam": "Winnipeg Jets",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
         "date": "2018-05-19",
         "gameType": "P",
         "resultType": "TBD",
         "homeTeam": "Tampa Bay Lightning",
         "awayTeam": "Washington Capitals",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
+        "date": "2018-05-20",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Winnipeg Jets",
+        "awayTeam": "Vegas Golden Knights",
         "homeGoals": 0,
         "awayGoals": 0
     },
@@ -12096,11 +12141,29 @@
         "awayGoals": 0
     },
     {
+        "date": "2018-05-22",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Vegas Golden Knights",
+        "awayTeam": "Winnipeg Jets",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
         "date": "2018-05-23",
         "gameType": "P",
         "resultType": "TBD",
         "homeTeam": "Tampa Bay Lightning",
         "awayTeam": "Washington Capitals",
+        "homeGoals": 0,
+        "awayGoals": 0
+    },
+    {
+        "date": "2018-05-24",
+        "gameType": "P",
+        "resultType": "TBD",
+        "homeTeam": "Winnipeg Jets",
+        "awayTeam": "Vegas Golden Knights",
         "homeGoals": 0,
         "awayGoals": 0
     }
