--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -12053,11 +12053,11 @@
     {
         "date": "2018-05-12",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Winnipeg Jets",
         "awayTeam": "Vegas Golden Knights",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 4,
+        "awayGoals": 2
     },
     {
         "date": "2018-05-13",
