--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -12098,11 +12098,11 @@
     {
         "date": "2018-05-17",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Washington Capitals",
         "awayTeam": "Tampa Bay Lightning",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 2,
+        "awayGoals": 4
     },
     {
         "date": "2018-05-18",
