--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -12107,11 +12107,11 @@
     {
         "date": "2018-05-18",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Vegas Golden Knights",
         "awayTeam": "Winnipeg Jets",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 3,
+        "awayGoals": 2
     },
     {
         "date": "2018-05-19",
