--- a/data/season2017-18.json
+++ b/data/season2017-18.json
@@ -12116,11 +12116,11 @@
     {
         "date": "2018-05-19",
         "gameType": "P",
-        "resultType": "TBD",
+        "resultType": "REG",
         "homeTeam": "Tampa Bay Lightning",
         "awayTeam": "Washington Capitals",
-        "homeGoals": 0,
-        "awayGoals": 0
+        "homeGoals": 3,
+        "awayGoals": 2
     },
     {
         "date": "2018-05-20",
